AC_INIT([USB_BPG_200 C++], [0.1], [alessandro@razeto.it], [USB_BPG_200], [http://www.deditec.de/en/entwicklungstools/prod/bit-pattern-generator-36.html])
AC_PREREQ([2.59])
AM_INIT_AUTOMAKE([1.10 -Wall no-define foreign])
LT_INIT
PKG_CHECK_MODULES([DEPS], [libftdi >= 0.20])
AC_CONFIG_HEADERS([config.h])
AC_PROG_CXX
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
